[tool.poetry]
name = "learning-langchain"
version = "0.1.0"
description = ""
authors = ["bpbirch <brendanpbirch@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_langchain"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.23"
langchain-openai = "^0.3.13"
langchain-community = "^0.3.21"
langchain-text-splitters = "^0.3.8"
langchain-postgres = "^0.0.14"
pydantic-settings = "^2.8.1"
pydantic = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
